--- a/index.html
+++ b/index.html
@@ -2,11 +2,78 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="jQuery.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        *{
+            margin: 0;
+        }
+        h1{
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
+        p{
+            padding: 10px;
+        }
+    </style>
 </head>
 <body>
-    
+
+    <center><h1 style="background-color:black;color:white;" >This is header</h1></center>
+   
+    <p style="background-color:rgb(22, 224, 39);color:white; display: none;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus labore rem molestiae repellendus exercitationem, 
+    ad corporis soluta fugit <a id="more" href="#">show more</a><br>
+    <b id="show" style="display:none;">Lorem ipsum dolor sit amet consectetur
+         adipisicing elit. Voluptates unde atque magnam repudiandae, illum 
+         itaque commodi voluptas non eveniet quod cumque cupiditate fugiat, 
+         eligendi, facere eius? Repellat iste porro tenetur!
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Neque, 
+        perferendis.</b></p>
+        <div id="mySli" style="margin:12px ;background-color:aquamarine;display: none;">
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+         Esse recusandae repellat perferendis placeat maiores, nesciunt ab 
+         voluptatem! Sit error molestiae, ipsa possimus quae, inventore 
+         laudantium harum esse hic voluptates corrupti minima incidunt! Beatae, 
+         numquam accusamus. Commodi qui obcaecati aliquid ratione optio 
+         perspiciatis, voluptatibus tempore sed reprehenderit recusandae 
+         in enim quidem quia dolorem laboriosam accusantium hic? Eaque laboriosa
+         m ducimus libero a placeat consequatur quo, vitae corporis, blanditiis 
+         neque nesciunt? Illo nostrum sit excepturi autem voluptates qui, tempora
+          consectetur amet nihil modi
+          quam corrupti praesentium, dolorem dicta deserunt cupiditate! Ratione
+         repellat vitae nam ex eum velit cum, iusto, debitis illo quo aspernatur?
+        </div>
+ 
+    <div class="header" style="background-color:red;">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button> 
+              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" id="home" href="#">Home</a>
+                  <a class="nav-link" id="about" href="#">about</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+    </div>
+    <div class="title">
+        <div id="a" style="display:none;background-color: green;color:white;padding:12px;">
+            <b>Home</b>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque recusandae aut, animi excepturi explicabo velit dolores consequuntur praesentium nisi illo necessitatibus deserunt error ab ex temporibus placeat, labore pariatur. Necessitatibus!
+        </div>
+        <div id="b" style="display:none;background-color: blue;color:white;padding:12px;">
+            <b>about</b>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque recusandae aut, animi excepturi explicabo velit dolores consequuntur praesentium nisi illo necessitatibus deserunt error ab ex temporibus placeat, labore pariatur. Necessitatibus!
+        </div>
+    </div>
 </body>
+<script src="js.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </html>
